// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With ng-content / Button with different contents Always Define Template Or Component 1`] = `
<storybook-wrapper>
  <sb-button>
    <button>
      <sb-button>
        <button
          style="background-color: rgb(94, 173, 245);"
        />
      </sb-button>
    </button>
  </sb-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Button with different contents Empty Button 1`] = `
<storybook-wrapper>
  <sb-button>
    <button />
  </sb-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Button with different contents In <h1> 1`] = `
<storybook-wrapper>
  <sb-button>
    <button>
      <h1>
        My button in h1
      </h1>
    </button>
  </sb-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Button with different contents With Component 1`] = `
<storybook-wrapper>
  <sb-button>
    <button>
      <sb-emoji>
        👾
      </sb-emoji>
    </button>
  </sb-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Button with different contents With Component And Args 1`] = `
<storybook-wrapper>
  <sb-button>
    <button>
      <sb-emoji
        ng-reflect-emoji="🌵"
      >
        🌵
      </sb-emoji>
    </button>
  </sb-button>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Button with different contents With Dynamic Content And Args 1`] = `
<storybook-wrapper>
  <sb-button>
    <button>
      My button text
    </button>
  </sb-button>
</storybook-wrapper>
`;
